[package]
name = "navigator-rs"
version = "0.3.1"
edition = "2021"
license = "MIT"
description = "This crate serves as the entry point for embedding applications using Rust on Blue Robotics's Navigator"
homepage = "https://bluerobotics.com/store/comm-control-power/control/navigator/"
documentation = "https://docs.bluerobotics.com/navigator-rs/doc/navigator_rs/"
repository = "https://github.com/bluerobotics/navigator-rs"
categories = ["BlueRobotics", "Embedded development", "Science"]
keywords = ["BlueRobotics", "embedded", "navigator", "robotics", "ROV"]
readme = "README.md"

[dependencies]
ads1x1x = { path = "../ads1x1x-rs" }
ak09915_rs = { path = "../AK09915-rs" }
approx = "0.5.1"
bmp280 = "0.4.0"
embedded-hal = "1.0.0"
icm20689 = { path = "../icm20689" }
jetgpio-sys = { version = "0.2.0", features = ["orin"] }
linux-embedded-hal = "0.4"
log = "0.4.19"
nb = "1.1.0"
pwm-pca9685 = { path = "../pwm-pca9685-rs" }
sk6812_rpi = "0.1"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false
